//***************
//Version History
//***************
[4.9.2]
+ Improved the use of the nsITransferable interface, to support the upcoming changes to private browsing.
+ Bug Fix: A new tab is no longer opened if the user has the "Open search results in a new tab" option checked, and the current tab is on "about:newtab".

--

[4.9.1]
+ Made a few minor improvements to the installer manifest.
+ Removed the embedded JAR file from within the XPI.
+ Bumped the maxVersion to 20.*.
+ Bug Fix: Corrected an issue that was causing the toolbar to shut down after toolbar customization.

--

[4.9.0]
+ Native secure search should now work for the following top-level domains: google.co.uk, google.fr, and google.de
+ Secure image searches can now be performed
+ Added google.cz and google.si to the list of top-level domains
+ The minimum supported Firefox version has been changed from 3.6 to 4.0
+ Googlebar Lite no longer overrides the built-in toolbar customization function
+ Removed obsolete contents.rdf files from each localization folder, reducing overall file size
+ Bug Fix: Googlebar Lite is now initialized properly after adding the main Googlebar Lite toolbar item during toolbar customization
+ Bug Fix: Googlebar Lite is now shut down properly after removing the main Googlebar Lite toolbar item during toolbar customization
+ Bug Fix: Errors should no longer be thrown after removing the main Googlebar Lite toolbar item during toolbar customization
+ Bug Fix: The routine for migrating old preferences should no longer be called on every startup
+ Bug Fix: Updated redirection rules for several items in the Google Links menu, as well as when clicking toolbar buttons with no search terms, when the use secure search option is enabled
+ Bug Fix: The "site to use" menu item in the Googlebar Lite options dialog should now be properly initialized on new installs

--

[4.8.2]
+ Bug Fix: Extended characters should no longer get corrupted when searching

--

[4.8.1]