@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Ιστοσελίδα του Google προς χρήση:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Η αλλαγή της συντόμευσης για την εστίαση στο πεδίο αναζήτησης απαιτεί επανεκκίνηση του προγράμματος περιήγησης.">
 <!ENTITY gblite.options.label.searchboxfocus "Ορισμός Εστίασης Πεδίου Αναζήτησης">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter εκτελεί το α">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter εκτελεί το α">
 <!ENTITY gblite.options.label.shiftctrlenter "Ctrl + Shift + Enter εκτελεί το α">
