@@ -115,7 +115,7 @@
 <!ENTITY gblite.options.label.shortcutctrl "Ctrl">
 <!ENTITY gblite.options.label.shortcutalt "Alt">
 <!ENTITY gblite.options.label.shortcutshift "Shift">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
+<!ENTITY gblite.options.label.shortcuterror "The specified shortcut combination is invalid. Select at least one modifier key and provide a letter on the keyboard.">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter performs a">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter performs a">
 <!ENTITY gblite.options.label.shiftctrlenter "Ctrl + Shift + Enter performs a">
