@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Goggle stranica koja će se koristiti:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Promjena tipkovničke kratice za fokusiranje okvira za pretraživanje zahtijeva ponovno pokretanje preglednika.">
 <!ENTITY gblite.options.label.searchboxfocus "Postavi fokus okvira za pretraživanje">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter izvodi">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter izvodi">
 <!ENTITY gblite.options.label.shiftctrlenter "Shift + Ctrl + Enter izvodi">
