@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Google site to use:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Changing the search box focus shortcut requires a restart of the browser.">
 <!ENTITY gblite.options.label.searchboxfocus "Set Search Box Focus">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter performs a">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter performs a">
 <!ENTITY gblite.options.label.shiftctrlenter "Ctrl + Shift + Enter performs a">
