@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Te gebruiken Google site:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Het wijzigen van de zoekvenster activering vereist het opnieuw starten van de browser.">
 <!ENTITY gblite.options.label.searchboxfocus "Zoekvenster actief maken">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter zoekt in:">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter zoekt in:">
 <!ENTITY gblite.options.label.shiftctrlenter "Ctrl + Shift + Enter zoekt in:">
