@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Использовать сайт Google">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Изменение режима активности поля поиска требует перезагрузки приложения">
 <!ENTITY gblite.options.label.searchboxfocus "Установить активным поле поиска">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "по нажатию Shift + Enter запускать">
 <!ENTITY gblite.options.label.ctrlenter "по нажатию Ctrl + Enter запускать">
 <!ENTITY gblite.options.label.shiftctrlenter "по нажатию Shift + Ctrl + Enter запускать">
