@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Použiť stránku Google:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Zmena skratky pre záber vyhľadávacieho poľa vyžaduje reštart prehliadača">
 <!ENTITY gblite.options.label.searchboxfocus "Nastaviť záber vyhľadávacieho poľa">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter vykonáva">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter vykonáva">
 <!ENTITY gblite.options.label.shiftctrlenter "Shift + Ctrl + Enter vykonáva">
