@@ -111,7 +111,6 @@
 <!ENTITY gblite.options.label.sitetouse "Kullanılacak Google Sitesi:">
 <!ENTITY gblite.options.label.shortcutrestartwarning "Arama kutusu odağının değiştirilmesi tarayıcıyı yeniden başlatmayı gerektirir.">
 <!ENTITY gblite.options.label.searchboxfocus "Arama Kutusu Odağını Ayarla">
-<!ENTITY gblite.options.label.shortcutprefix "Ctrl + Shift +">
 <!ENTITY gblite.options.label.shiftenter "Shift + Enter şunu yapar:">
 <!ENTITY gblite.options.label.ctrlenter "Ctrl + Enter şunu yapar:">
 <!ENTITY gblite.options.label.shiftctrlenter "Shift + Ctrl + Enter şunu yapar:">
